--- a/styles/header.css
+++ b/styles/header.css
@@ -24,7 +24,7 @@
     padding: 10px 15px;
     min-width: unset;
     margin-bottom: 0;
-    background: #e80a89;
+    background: #ca7968;
     position: relative;
     text-align: center;
     border-radius: 5px;
