--- a/styles/project.css
+++ b/styles/project.css
@@ -46,16 +46,10 @@
 }
 .section-content__item__name{
     width: 100%;
-    padding: 12px 20px;
+    padding: 12px 11px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.section-content__item__name .action {
-    display: none;
-}
-.section-content__item:hover .action{
-    display: block
 }
 .section-content__item__name .action button {
     background: none;
@@ -68,4 +62,35 @@
     font-weight: bold;
     color: #fff;
     text-decoration: none;
+}
+.section-content__item__name .list-action {
+    position: absolute;
+    background: #000;
+    padding: 10px;
+    z-index: 556;
+    bottom: -33px;
+    right: -78px;
+    color: #fff;
+    font-size: 14px;
+    display: none;
+}
+.section-content__item__name .list-action.active{
+    display: block;
+}
+.section-content__item__name .edit-action {
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.section-content__item__name .delete-action{
+    cursor: pointer;
+}
+.edit-action:hover, .delete-action:hover {
+    color: #0099ff;
+}
+.section-content__item__name .action {
+    padding: 5px;
+    cursor: pointer;
+}
+.section-content__item__name .action i{
+    color: #fff;
 }
