--- a/styles/listStudent.css
+++ b/styles/listStudent.css
@@ -19,3 +19,94 @@ thead {
     color: #fff;
 }
 
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    line-height: 1.42em;
+    color:#A7A1AE;
+    background-color:#1F2739;
+}
+  
+h1 {
+    font-size:3em; 
+    font-weight: 300;
+    line-height:1em;
+    text-align: center;
+    color: #4DC3FA;
+    margin-top: 10px;
+}
+  
+h2 {
+    font-size:1em; 
+    font-weight: 300;
+    text-align: center;
+    display: block;
+    line-height:1em;
+    padding-bottom: 2em;
+    color: #FB667A;
+}
+  
+h2 a {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #FB667A;
+    text-decoration: none;
+}
+  
+.blue { color: #185875; }
+.yellow { color: #FFF842; }
+
+.container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+    text-align: left;
+    color: #185875;
+}
+  
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+td.action {
+    padding-top: 10px!important;
+    padding-bottom: 10px!important;
+}
+.container {
+    text-align: left;
+    overflow: hidden;
+    width: 97%;
+    margin: 0 auto;
+    display: table;
+    padding: 0 0 8em 0;
+}
+  
+.container td, .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left:2%;  
+}
+.container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+  
+.container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+  
+.container th {
+    background-color: #1F2739;
+}
+.container td:first-child { color: #ca7968; }
+.edit-score {
+    font-size: 13px;
+    /* font-weight: bold; */
+    background: #0099ff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    height: 33px;
+    /* padding: 15px 17px; */
+}
