--- a/styles/course.css
+++ b/styles/course.css
@@ -104,11 +104,39 @@
 .modal-body__item {
     margin-bottom: 10px;
 }
+.thread-image{
+    width: 100%;
+    text-align: center;
+    margin: 20px 0px;
+}
+.thread-image img {
+    width: 80%;
+    height: 300px;
+    object-fit: cover;
+}
+.modal-body {
+    max-height: 435px;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px;
+
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #666; 
+}
 .modal-body__bottom {
-    margin: 30px 0px 5px 0px;
     text-align: center;
 }
-.modal-body button {
+.modal-body__bottom button {
     font-size: 14px;
     font-weight: bold;
     background: #0099ff;
