--- a/styles/courseTeacher.css
+++ b/styles/courseTeacher.css
@@ -137,3 +137,28 @@
     padding: 8px 17px;
     cursor: pointer;
 }
+.thumb-image {
+    margin-top: 10px;
+    width: 100px;
+    position: relative;
+    padding: 5px;
+}
+.modal-body {
+    max-height: 435px;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px;
+
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #666; 
+}
