--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -210,3 +210,84 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #666; 
 }
+
+#openModalEditProfile .modal-content__top{
+    padding: 30px 20px 0px 27px;
+    font-size: 15px;
+    color: #fff;
+    font-weight: bold;
+    background-color: #1b2845;
+    background-image: linear-gradient(315deg, #1b2845 0%, #274060 74%);
+
+}
+#openModalEditProfile .modal-content{
+    width: 400px!important;
+}
+#openModalEditProfile .modal-dialog{
+    width: 400px!important;
+}
+.modal-bottom__avatar img {
+    height: 145px;
+    width: 145px;
+    border-radius: 50%;
+}
+.edit-content {
+    position: relative;
+    padding: 0px 40px;
+}
+.modal-bottom__avatar {
+    position: relative;
+    /* position: absolute; */
+    bottom: -73px;
+    display: flex;
+    justify-content: center;
+}
+#openModalEditProfile .signInForm .input__label {
+    color: #555;
+    text-align: left;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 500;
+    padding-bottom: 5px;
+    display: block;
+}
+.signInForm input {
+    margin-bottom: 24px;
+}
+.signUpForm input {
+    margin-bottom: 21px;
+}
+#openModalEditProfile .signInForm .input__field {
+    position: relative;
+    height: 40px;
+    min-width: 192px;
+    width: 100%;
+    border-radius: 2px;
+    background: none;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #555;
+    padding: 8px 16px;
+    border: 1px solid #555;
+    margin-bottom: 15px;
+    outline: none;
+}
+.edit-submit {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.edit-submit__button {
+    font-size: 14px;
+    font-weight: bold;
+    background: #0099ff;
+    border: none;
+    border-radius: 25px;
+    color: #fff;
+    padding: 8px 17px;
+    cursor: pointer;
+}
+.modal-content__bottom {
+    padding-top: 90px;
+}
